# Music-Manual

./: .travis.yml  AUTHORS  Makefile.am  Makefile.in  README.md  config.h  configure  configure.ac
doc/: Makefile.in
examples/: Makefile.in
scripts/: Makefile.in
src/: Makefile.am  Makefile.in  main.cc  main.cpp  main.hh  main.hpp  musicmanual.cc  musicmanual.hh
src/.deps/: main.Po
