# Requiring 2.69 or higher autotools
AC_PREREQ([2.69])

# AC_INIT
AC_INIT([music-manual], [0.1], [harleylorenzo512@gmail.com], [music-manual], [https://github.com/HarleyLorenzo/music-manual])

# Setting C++ and checking compiler
AC_LANG(C++)
AC_PROG_CXX

# Config macros
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/main.cc])
AC_CONFIG_FILES([Makefile src/Makefile])

# Initiate automake
AM_INIT_AUTOMAKE

# Outputting to the makefiles
AC_OUTPUT
